--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
 			<id>bigdata.releases</id>
 			<url>http://www.systap.com/maven/releases</url>
 		</repository>
+		<repository>
+			<id>phenoscape</id>
+			<name>Phenoscape Maven repository</name>
+			<url>http://phenoscape.svn.sourceforge.net/svnroot/phenoscape/trunk/maven/repository</url>
+		</repository>
 	</repositories>
 	<pluginRepositories>
 		<pluginRepository>
@@ -49,19 +54,24 @@
 			<version>3.1</version>
 		</dependency>
 		<dependency>
+			<groupId>net.sourceforge.owlapi</groupId>
+			<artifactId>owlapi-distribution</artifactId>
+			<version>3.5.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.phenoscape</groupId>
 			<artifactId>kb-owl-tools</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>1.0.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.phenoscape</groupId>
 			<artifactId>owlet</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.semanticweb.elk</groupId>
 			<artifactId>elk-owlapi</artifactId>
-			<version>0.4.0</version>
+			<version>0.4.1</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -77,7 +87,7 @@
 		<dependency>
 			<groupId>org.phenoscape</groupId>
 			<artifactId>phenex</artifactId>
-			<version>1.15.3-SNAPSHOT</version>
+			<version>1.15.4</version>
 		</dependency>
 	</dependencies>
 	<build>
